2007-11-14  Benjamin Mack  <mack@xnos.org>

	* (feature) Fixed #6625: Cleaner Backend / HCI: Make "alt_doc" header fixed

2007-11-13  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Feature #6705: htmlArea RTE: Display all classes of an element in the statusbar
	* htmlArea RTE: Update manual and version  to 1.6.3dev

2007-11-13  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed bug #633: Menu doesn't expand if ".special" is set

2007-11-13  Benjamin Mack  <mack@xnos.org>

	* (minor) Fixed bug #6548: FE "Preview" Label not stylable

2007-11-12  Oliver Hader  <oh@inpublica.de>

	* (minor) Fixed bug #6696: Parts of the TYPO3 back-end do not work correctly with prototype.js 1.6.0

2007-11-12  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Feature #6579 continued: Backtracking on the use of Prototype.js by htmlArea RTE.

2007-11-11  Ingmar Schlecht  <ingmar@typo3.org>

	* Minor code-cleanup to recent Workspace related changes

2007-11-10  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* (cleanup) Protect rtehtmlarea 'for' loops from properties possibly added by JS frameworks.
	* Feature #6579 continued: correction to plugin registration for FE case

2007-11-10  Ingmar Schlecht  <ingmar@typo3.org>

	* Feature #6256: $TCA: Newline for Tabs (--div--) (Thanks to Malte Jansen)
	* Minor Feature #4280: stdWrap for params property of IMAGE (Thanks to Ralf Hettinger)
	* Bug #6682: GMENU property disableAltText clears the content of alt param, but does not remove it (Thanks to Hemlut Hummel)

2007-11-09  Benjamin Mack  <mack@xnos.org>

	* (feature/cleanup) Refactored clickmenu to speed up the BE
	* (bugfix) Fixed Image Generation bug. Call in t3lib_div now uses the IM wrapper to render gifs/pngs

2007-11-08  Ingo Renner	<ingo@typo3.org>

	* added initial cleaner backend project work (backend.php)

2007-11-08  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Feature #6668 continued: Some minor adjustments when htmlArea RTE uses the Ajax request
